[metadata]
name = utro
version = 0.1.1
description = Utro client
author = Retoor
author_email = retoor@retoor.io
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
package_dir =
    = src
python_requires = >=3.7
install_requires =
    aiohttp>=3.10.10
    requests>=2.32.3

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    utro = utro.cli:main
